--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul>
                 <li>
                     <h3 class="section-strategy-h">Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <p class="section-strategy-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 
                 <li>
@@ -73,7 +73,7 @@
 
         <section class="team">
             <h2 class="section-title">Our Team</h2>
-            <ul>
+            <ul class="team-list">
                 <li>
                     <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3 class="team-h">Mark Guerrero</h3>
@@ -115,8 +115,6 @@
                         <h3 class="portfolio-h">Meditation App</h3>
                         <p class="portfolio-p">App</p>
                     </li>
-                </ul>
-                <ul>
                     <li>
                         <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300">
                         <h3 class="portfolio-h">Taxi Service</h3>
