--- a/index.html
+++ b/index.html
@@ -73,23 +73,23 @@
 
         <section class="team">
             <h2 class="section-title">Our Team</h2>
-            <ul class="team-list">
-                <li>
+            <ul>
+                <li class="team-list">
                     <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3 class="team-h">Mark Guerrero</h3>
                     <p class="team-p">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list">
                     <img class="team-img" src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="team-h">Tom Ford</h3>
                     <p class="team-p">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list">
                     <img class="team-img" src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3 class="team-h">Camila Garcia</h3>
                     <p class="team-p">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list">
                     <img class="team-img" src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="team-h">Daniel Wilson</h3>
                     <p class="team-p">UI Designer</p>
